# NeuroMap

./: .gitignore  Readme.md  pyproject.toml  requirements.txt
backend/data/: brats_datalist.json
backend/neuromap/: __init__.py  __main__.py  api.py  data.py  model.py  predict.py  train.py  uq.py
frontend/: next.config.mjs  package-lock.json  package.json
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/app/api/bridge/[...path]/: route.ts
frontend_static/: README.md  app.js  index.html  styles.css
frontend_static/assets/: manifest.json  scatter3d_high.json  scatter3d_low.json  scatter3d_medium.json
frontend_static/scripts/: regenerate_scatter.py
